# ezee-garden-mvp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/: __init__.py
app/db/: session.py
app/domain/models/: __init__.py
app/domain/rules/: __init__.py
app/domain/services/: __init__.py
app/static/: main.js  styles.css
app/templates/: base.html  index.html
app/web/: routes.py
docs/: backlog.md  prd-mvp.md  system-requirements.md  vision.md
tests/: test_health.py
